--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@handsontable/react": "^1.0.0",
+    "handsontable": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "react": "^16.4.1",
