--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "license": "MIT",
   "dependencies": {
     "@handsontable/react": "^1.0.0",
+    "chess.js": "^0.10.2",
     "handsontable": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "webpack": "^4.12.0",
     "webpack-dev-server": "^3.1.4"
   },
