--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "react": "^16.4.1",
+    "react-chessboardjs": "^0.5.3",
+    "react-chessground": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
