--- a/package.json
+++ b/package.json
@@ -3,29 +3,32 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build:production": "webpack"
   },
   "license": "MIT",
   "dependencies": {
     "@handsontable/react": "^1.0.0",
+    "bootstrap": "^4.1.1",
     "chess.js": "^0.10.2",
     "handsontable": "^4.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-chessboardjs": "^0.5.3",
     "react-chessground": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "webpack": "^4.12.0",
-    "webpack-dev-server": "^3.1.4"
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack-cli": "^3.0.8"
+    "compression-webpack-plugin": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
