--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build:production": "webpack"
+    "start": "webpack-dev-server --mode development",
+    "build:production": "webpack --mode production",
+    "build:development": "webpack --mode development"
   },
   "license": "MIT",
   "dependencies": {
     "@handsontable/react": "^1.0.0",
     "bootstrap": "^4.1.1",
-    "chess.js": "^0.10.2",    
+    "chess.js": "^0.10.2",
     "handsontable": "^4.0.0",
     "path": "^0.12.7",
     "react": "^16.4.1",
@@ -27,7 +28,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^1.1.11",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "node-loader": "^0.6.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",    
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
